crates/strata-kernel/tests/ui/coordination_durable_test_authority_is_sealed.rs
use strata_kernel::{CoordinationDurable, CoordinationFailpoint};

fn main() {}
